--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
     - php: 5.5
     - php: 5.6
       env: COLLECT_COVERAGE=true CHECK_CS=true
+    - php: 7
+    - php: hhvm
 
 cache:
   directories:
