Fix: Lower minimum-stability to dev, but prefer stable releases

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
             "email": "andreas.moller@refinery29.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=5.5"
     },
