--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
         "psr-4": {
             "Refinery29\\NewRelic\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Refinery29\\NewRelic\\Test\\": "test"
+        }
     }
 }
