--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 /test               export-ignore
 /.codeclimate.yml   export-ignore
 /.gitattributes     export-ignore
+/.github            export-ignore
 /.gitignore         export-ignore
 /.php_cs            export-ignore
 /.travis.yml        export-ignore
