--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": "^5.5 || ^7.0"
     },
     "require-dev": {
-        "codeclimate/php-test-reporter": "^0.2.0",
+        "codeclimate/php-test-reporter": "0.3.2",
         "phpunit/phpunit": "^4.8.24",
         "refinery29/php-cs-fixer-config": "0.4.16",
         "refinery29/test-util": "0.4.3"
