--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^5.5 || ^7.0"
+        "php": "^5.5 || ^7.0",
+        "beberlei/assert": "^2.5.0"
     },
     "require-dev": {
         "codeclimate/php-test-reporter": "0.3.2",
